kubernetes/policies/kyverno/validate-disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/title: "Disallow Privileged Containers"
    policies.kyverno.io/category: "Pod Security Standards (Restricted)"
    policies.kyverno.io/severity: "high"
    policies.kyverno.io/description: "Privileged containers can easily escalate to host root. This policy blocks any pod requesting privileged: true or host namespaces."
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: validate-privileged
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - payments-processing
    validate:
      message: "Privileged containers are strictly forbidden in CDE namespaces."
      pattern:
        spec:
          =(hostPID): false
          =(hostIPC): false
          =(hostNetwork): false
          containers:
          - =(securityContext):
              =(privileged): false

# created by @jsaccomani
